# Data-Structure

./: README.md
CLion/CourseBook/: CMakeLists.txt
CLion/CourseBook/0211_Polynomial/: Polynomial.c
CLion/CourseBook/0306_Hanoi/: Hanoi.c
CLion/CourseBook/0309_BankQueuing/: BankQueuing-main.c
CLion/CourseBook/0405_WordList/: WordList-main.c  WordList.c
CLion/CourseBook/0601_SqBiTree/: SqBiTree.c
CLion/CourseBook/0606_CTree/: CTree-main.c  CTree.c  TestData_T.txt
CLion/CourseBook/0611_NQueens/: NQueens.c
CLion/CourseBook/0711_ShortestPaths/: ShortestPaths.c
CLion/CourseBook/0901_SequentialSearch/: ALGO9-1.c  C9-1.H  CMakeLists.txt
CLion/CourseBook/0902_BinarySearch/: ALGO9-1.c  BO9-1.c  C9-1.H  CMakeLists.txt
CLion/CourseBook/0903_SecondOptimal/: ALGO9-1.c  C9-1.H  CMakeLists.txt
CLion/CourseBook/0904_SearchBST/: Algo9-2.c  C9.H  CMakeLists.txt  bo9-2.c  c9-2.h
CLion/CourseBook/0905_BalancedBTree/: Algo9-5.c  BO9-3.c  CMakeLists.txt  c9-2.h
CLion/CourseBook/0906_DynamicBTree/: Algo9-6.c  BO9-4.c  C9-3.h  CMakeLists.txt
CLion/CourseBook/0907_DoubleLinkTree/: Algo9-7.c  Bo9-5.c  C9-4.H  CMakeLists.txt
CLion/CourseBook/0908_TrieTree/: Algo9-8.c  Bo9-6.c  C9-5.H  CMakeLists.txt
CLion/CourseBook/0910_HashTable/: Bo9-7.c  C9-6.H  CMakeLists.txt  algo9-9.c
CLion/CourseBook/1001_InsertSort/: Algo10-1.c  CMakeLists.txt
CLion/CourseBook/1002_TableSort/: Algo10-2.c  C10-2.H  CMakeLists.txt  c1.h  convert.sh
CLion/CourseBook/1103_ReplaceSelectSort/: C10-1.H  CMakeLists.txt  algo11-3.c  bo11-1.c  f0  f1  f2
CLion/ExerciseBook/: CMakeLists.txt
(+156 files in other folders)
